--- a/files/.i3status.conf
+++ b/files/.i3status.conf
@@ -1,13 +1,31 @@
+# i3status configuration file.
+# see "man i3status" for documentation.
+
+# It is important that this file is edited as UTF-8.
+# The following line should contain a sharp s:
+# ß
+# If the above line is not correctly displayed, fix your editor first!
+
 general {
         colors = true
         interval = 5
 }
 
+order += "battery 1"
+order += "battery 0"
 order += "load"
-order += "time"
+order += "tztime local"
 
-time {
-        format = "%Y-%m-%d %H:%M"
+battery 0 {
+        format = "%status %percentage %remaining"
+}
+
+battery 1 {
+        format = "%status %percentage %remaining"
+}
+
+tztime local {
+        format = "%Y-%m-%d %H:%M:%S"
 }
 
 load {
