--- a/files/.config/termite/config
+++ b/files/.config/termite/config
@@ -1,9 +1,9 @@
 [options]
-#allow_bold = false
+allow_bold = false
 #audible_bell = false
 #clickable_url = true
 #dynamic_title = true
-font = Iosevka Term Regular 13
+font = Inconsolata Medium 12
 #fullscreen = true
 #geometry = 640x480
 #icon_name = terminal
