--- a/files/.i3/config
+++ b/files/.i3/config
@@ -165,3 +165,4 @@ bindsym XF86AudioLowerVolume exec pactl set-sink-volume 1 -5% #decrease sound vo
 bindsym XF86AudioMute exec pactl set-sink-mute 1 toggle # mute sound
 
 bindsym $mod+x exec i3lock -c 202020
+bindsym $mod+c exec --no-startup-id chromium-browser --incognito
