--- a/files/.i3/config
+++ b/files/.i3/config
@@ -166,3 +166,5 @@ bindsym XF86AudioMute exec pactl set-sink-mute 1 toggle # mute sound
 
 bindsym $mod+x exec i3lock -c 202020
 bindsym $mod+c exec --no-startup-id chromium-browser --incognito
+bindsym $mod+q workspace back_and_forth
+workspace_auto_back_and_forth yes
