--- a/files/.i3/config
+++ b/files/.i3/config
@@ -168,6 +168,7 @@ bindsym $mod+z exec --no-startup-id xset dpms force off
 bindsym $mod+x exec i3lock -c 202020
 bindsym $mod+c exec --no-startup-id chromium-browser --incognito
 bindsym $mod+q workspace back_and_forth
+bindsym $mod+u exec --no-startup-id sudo pm-suspend
 workspace_auto_back_and_forth yes
 
 bindsym $mod+o nop history_backward
