--- a/files/.i3/config
+++ b/files/.i3/config
@@ -164,7 +164,7 @@ bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 1 +5% #increase sound vo
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume 1 -5% #decrease sound volume
 bindsym XF86AudioMute exec pactl set-sink-mute 1 toggle # mute sound
 
-bindsym $mod+z exec --no-startup-id xset dpms force off
+bindsym $mod+z exec --no-startup-id xset dpms force standby
 bindsym $mod+x exec i3lock -c 202020
 bindsym $mod+c exec --no-startup-id chromium-browser --incognito
 bindsym $mod+q workspace back_and_forth
