--- a/files/.i3/config
+++ b/files/.i3/config
@@ -24,7 +24,7 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -163,6 +163,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86Tools exec --no-startup-id dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
 
 bindsym $mod+z exec --no-startup-id xset dpms force standby
 bindsym $mod+x exec i3lock -c 202020
@@ -175,3 +176,24 @@ bindsym $mod+i nop history_forward
 bindsym $mod+minus move scratchpad
 
 # no laptop config after this line
+
+# multi-display specific setup
+bindsym $mod+Control+l focus output left
+bindsym $mod+Control+h focus output right
+
+workspace 1 output DP-1
+workspace 2 output DP-1
+workspace 3 output DP-1
+workspace 4 output DP-1
+workspace 5 output DP-1
+workspace 6 output HDMI-2
+workspace 7 output HDMI-2
+workspace 8 output HDMI-2
+workspace 9 output HDMI-2
+workspace 10 output HDMI-2
+
+mouse_warping none
+
+bindsym $mod+Shift+f fullscreen global
+
+bindsym XF86Display exec --no-startup-id ~/.bin/cycle-monitors.sh
