--- a/files/.i3/config
+++ b/files/.i3/config
@@ -147,9 +147,9 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command /home/pb/.gygvenv/bin/tasks-i3status
 	colors {
-		statusline #888888
+		statusline #cccccc
 	}
 }
 
@@ -181,16 +181,16 @@ bindsym $mod+minus move scratchpad
 bindsym $mod+Control+l focus output left
 bindsym $mod+Control+h focus output right
 
-workspace 1 output DP-1
-workspace 2 output DP-1
-workspace 3 output DP-1
-workspace 4 output DP-1
-workspace 5 output DP-1
-workspace 6 output HDMI-2
-workspace 7 output HDMI-2
-workspace 8 output HDMI-2
-workspace 9 output HDMI-2
-workspace 10 output HDMI-2
+workspace 1 output DP1
+workspace 2 output DP1
+workspace 3 output DP1
+workspace 4 output DP1
+workspace 5 output DP1
+workspace 6 output HDMI2
+workspace 7 output HDMI2
+workspace 8 output HDMI2
+workspace 9 output HDMI2
+workspace 10 output HDMI2
 
 mouse_warping none
 
