--- a/files/.i3status.conf
+++ b/files/.i3status.conf
@@ -17,10 +17,14 @@ order += "load"
 order += "tztime local"
 
 battery 0 {
+        last_full_capacity = true
+        integer_battery_capacity = true
         format = "%status %percentage %remaining"
 }
 
 battery 1 {
+        last_full_capacity = true
+        integer_battery_capacity = true
         format = "%status %percentage %remaining"
 }
 
