--- a/files/.config/termite/config
+++ b/files/.config/termite/config
@@ -3,7 +3,7 @@
 #audible_bell = false
 #clickable_url = true
 #dynamic_title = true
-font = Iosevka Term Regular 13
+font = Iosevka 13
 #fullscreen = true
 #geometry = 640x480
 #icon_name = terminal
