--- a/files/.i3/config
+++ b/files/.i3/config
@@ -54,11 +54,11 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# multi screen setup
+bindsym $mod+Shift+y move workspace to output left
+bindsym $mod+Shift+u move workspace to output down
+bindsym $mod+Shift+i move workspace to output up
+bindsym $mod+Shift+o move workspace to output right
 
 # split in horizontal orientation
 bindsym $mod+b split h
