--- a/files/.i3/config
+++ b/files/.i3/config
@@ -147,7 +147,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command ~/i3status-with-todo.sh
 	colors {
 		statusline #888888
 	}
@@ -160,13 +160,13 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 3 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume 3 -5% #decrease sound volume
-bindsym XF86AudioMute exec pactl set-sink-mute 3 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
 bindsym $mod+z exec --no-startup-id xset dpms force standby
 bindsym $mod+x exec i3lock -c 202020
-bindsym $mod+c exec --no-startup-id chromium-browser --incognito
+bindsym $mod+c exec --no-startup-id .gyg-tools/code
 bindsym $mod+q workspace back_and_forth
 bindsym $mod+u exec --no-startup-id sudo pm-suspend
 
@@ -174,6 +174,7 @@ bindsym $mod+o nop history_backward
 bindsym $mod+i nop history_forward
 bindsym $mod+minus move scratchpad
 
-exec --no-startup-id caffeine
+exec --no-startup-id caffeine start -a
+exec --no-startup-id grobi watch
 
 # no laptop config after this line
