--- a/files/.config/alacritty/alacritty.toml
+++ b/files/.config/alacritty/alacritty.toml
@@ -36,3 +36,17 @@ family = "Iosevka"
 
 [mouse]
 hide_when_typing = true
+
+[[hints.enabled]]
+command = "xdg-open" # On Linux/BSD
+hyperlinks = true
+post_processing = true
+persist = false
+mouse.enabled = true
+binding = { key = "U", mods = "Control|Shift" }
+regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`\\\\]+"
+
+[[hints.enabled]]
+regex = "(?-u:\\b)perf-\\d{4}(?-u:\\b)"
+action = "Paste"
+binding = { key = "O", mods = "Control|Shift" }
