--- a/files/.config/alacritty/alacritty.toml
+++ b/files/.config/alacritty/alacritty.toml
@@ -29,13 +29,18 @@ foreground = "#a0a0a0"
 TERM = "xterm-256color"
 
 [font]
-size = 7.5
+size = 14
 
 [font.normal]
 family = "Iosevka"
+style = "Regular"
+
+[font.bold]
+family = "Iosevka"
+style = "Bold"
 
 [[hints.enabled]]
-command = "xdg-open"
+command = "open"
 post_processing = true
 regex = "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\u0000-\u001F\u007F-<>\"\\s{-}\\^⟨⟩`]+"
 
@@ -43,9 +48,22 @@ regex = "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|g
 key = "U"
 mods = "Control|Shift"
 
+[[keyboard.bindings]]
+key = "U"
+mods = "Command|Shift"
+action = "ScrollPageDown"
+
+[[keyboard.bindings]]
+key = "I"
+mods = "Command|Shift"
+action = "ScrollPageUp"
+
 [hints.enabled.mouse]
 enabled = true
 mods = "None"
 
 [mouse]
 hide_when_typing = true
+
+[window]
+option_as_alt = "Both"
