--- a/files/.config/alacritty/alacritty.toml
+++ b/files/.config/alacritty/alacritty.toml
@@ -43,10 +43,12 @@ style = "Bold"
 command = "open"
 post_processing = true
 regex = "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\u0000-\u001F\u007F-<>\"\\s{-}\\^⟨⟩`]+"
+mouse.enabled = true
+binding = { key = "U", mods = "Control|Shift" }
 
-[hints.enabled.binding]
-key = "U"
-mods = "Control|Shift"
+# [hints.enabled.binding]
+# key = "U"
+# mods = "Control|Shift"
 
 [[keyboard.bindings]]
 key = "U"
@@ -58,12 +60,22 @@ key = "I"
 mods = "Command|Shift"
 action = "ScrollPageUp"
 
-[hints.enabled.mouse]
-enabled = true
-mods = "None"
+# [hints.enabled.mouse]
+# enabled = true
+# mods = "None"
 
 [mouse]
 hide_when_typing = true
 
 [window]
 option_as_alt = "Both"
+
+[[hints.enabled]]
+regex = "(?-u:\\b)(perf-\\d{4}|hem-\\d{2,4})(-\\w+)*(?-u:\\b)"
+action = "Paste"
+binding = { key = "O", mods = "Control|Shift" }
+
+[[hints.enabled]]
+regex = "(?-u:\\b)([\\w-]+([\\./][\\w-]+)+)(?-u:\\b)"
+action = "Paste"
+binding = { key = "F", mods = "Shift|Alt" }
