--- a/files/.config/alacritty/alacritty.toml
+++ b/files/.config/alacritty/alacritty.toml
@@ -38,9 +38,14 @@ family = "Iosevka"
 command = "xdg-open"
 post_processing = true
 regex = "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\u0000-\u001F\u007F-<>\"\\s{-}\\^⟨⟩`]+"
+mouse.enabled = true
+
+[[hints.enabled]]
+action = "Paste"
+regex = "[a-zA-Z0-9_/.-]{4,}"
 
 [hints.enabled.binding]
-key = "U"
+key = "O"
 mods = "Control|Shift"
 
 [hints.enabled.mouse]
